--- a/book.bib
+++ b/book.bib
@@ -8,12 +8,13 @@
   year={2003}
 }
 
-@article{yarkoni_2019,
-  title={The generalizability crisis},
-  author={Yarkoni, Tal},
-  publisher={PsyArXiv},
-  year={2019},
-  url={https://doi.org/10.31234/osf.io/jqw35}
+@article{Luke_2017,
+  title={Evaluating significance in linear mixed-effects models in R},
+  author={Luke, Steven G},
+  journal={{Behavior Research Methods}},
+  volume={49},
+  pages={1494--1502},
+  year={2017},
 }
 
 @Book{xie2015,
@@ -26,6 +27,15 @@
   note = {ISBN 978-1498716963},
   url = {http://yihui.name/knitr/},
 }
+
+@article{yarkoni_2019,
+  title={The generalizability crisis},
+  author={Yarkoni, Tal},
+  publisher={PsyArXiv},
+  year={2019},
+  url={https://doi.org/10.31234/osf.io/jqw35}
+}
+
 
 @Manual{rmarkdown,
     title = {rmarkdown: Dynamic Documents for R},
