--- a/07-random-effects.Rmd
+++ b/07-random-effects.Rmd
@@ -8,7 +8,7 @@
 
 ## Web app
 
-- [Demo of crossed random effects](http://shiny.psy.gla.ac.uk/Dale/crossed)
+- [Demo of crossed random effects](https://shiny.psy.gla.ac.uk/Dale/crossed)
 
 ## Replacing t-test and ANOVA with linear mixed-effects regression
 
@@ -33,7 +33,7 @@ Let's consider a situation where you are testing the effect of alcohol consumpti
 The web app below presents simulated data from such a study. Subjects P01-P07 are from the placebo condition, while subjects T01-T07 are from the treatment condition.
 
 ```{r icc-app, echo=FALSE, fig.cap="Multi-level data from an independent samples design."}
-knitr::include_app("http://shiny.psy.gla.ac.uk/Dale/icc", height = "620px")
+knitr::include_app("https://shiny.psy.gla.ac.uk/Dale/icc", height = "620px")
 ```
 
 If we were going to run a t-test on these data, we would first need to calculate subject means, because otherwise the observations are not independent. You could do this as follows. (If you want to run the code below, you can download sample data from the web app above and save it as `independent_samples.csv`).
@@ -301,10 +301,10 @@ ds4 %>% count(item_id, A, B) %>% filter(item_id == 1L)
 
 ## Simulating data with crossed random factors
 
-For this first set of exercises, we will generate simulated data corresponding to an experiment with a single, two-level factor (independent variable) that is within-subjects and between-items.  Let's imagine that the experiment involves lexical decisions to a set of words (e.g., is "PINT" a word or nonword?), and the dependent variable is response time (in milliseconds), and the independent variable is word type (noun vs verb).  We want to treat both subjects and words as random factors (so that we can generalize to the population of events where subjects encounter words).  You can play around with the web app below (or [click here to open it in a new window](http://shiny.psy.gla.ac.uk/Dale/crossed){target="_blank"}), which allows you to manipulate the data-generating parameters and see their effect on the data.
+For this first set of exercises, we will generate simulated data corresponding to an experiment with a single, two-level factor (independent variable) that is within-subjects and between-items.  Let's imagine that the experiment involves lexical decisions to a set of words (e.g., is "PINT" a word or nonword?), and the dependent variable is response time (in milliseconds), and the independent variable is word type (noun vs verb).  We want to treat both subjects and words as random factors (so that we can generalize to the population of events where subjects encounter words).  You can play around with the web app below (or [click here to open it in a new window](https://shiny.psy.gla.ac.uk/Dale/crossed){target="_blank"}), which allows you to manipulate the data-generating parameters and see their effect on the data.
 
 ```{r webapp, echo=FALSE, fig.cap="*Web app for crossed random effects.*"}
-knitr::include_app("http://shiny.psy.gla.ac.uk/Dale/crossed", height = "600px")
+knitr::include_app("https://shiny.psy.gla.ac.uk/Dale/crossed", height = "600px")
 ```
 
 Here is the DGP for response time $Y_{si}$ for subject $s$ and item $i$:
