--- a/packages.bib
+++ b/packages.bib
@@ -17,9 +17,10 @@
 
 @Manual{R-dplyr,
   title = {dplyr: A Grammar of Data Manipulation},
-  author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller},
+  author = {Hadley Wickham and Romain François and Lionel {
+             Henry} and Kirill Müller},
   year = {2020},
-  note = {R package version 1.0.0},
+  note = {R package version 1.0.2},
   url = {https://CRAN.R-project.org/package=dplyr},
 }
 
@@ -42,8 +43,8 @@
 @Manual{R-kableExtra,
   title = {kableExtra: Construct Complex Table with 'kable' and Pipe Syntax},
   author = {Hao Zhu},
-  year = {2019},
-  note = {R package version 1.1.0},
+  year = {2020},
+  note = {R package version 1.3.1},
   url = {https://CRAN.R-project.org/package=kableExtra},
 }
 
@@ -81,9 +82,9 @@
 
 @Manual{R-tidyr,
   title = {tidyr: Tidy Messy Data},
-  author = {Hadley Wickham and Lionel Henry},
+  author = {Hadley Wickham},
   year = {2020},
-  note = {R package version 1.1.0},
+  note = {R package version 1.1.2},
   url = {https://CRAN.R-project.org/package=tidyr},
 }
 
@@ -99,8 +100,8 @@
   title = {webex: Create Interactive Web Exercises in 'R Markdown'},
   author = {Dale Barr and Lisa DeBruine},
   year = {2019},
-  note = {R package version 0.9.1},
-  url = {https://CRAN.R-project.org/package=webex},
+  note = {R package version 0.9.1.9100},
+  url = {https://github.com/psyteachr/webex},
 }
 
 @Book{bookdown2016,
