--- a/06-linear-mixed-effects-one.Rmd
+++ b/06-linear-mixed-effects-one.Rmd
@@ -165,4 +165,150 @@ The same logic goes for factorial designs in which there is more than one within
 
 ## Expressing the study design and performing tests in regression
 
-(section under construction! coming soon)
+In order to reproduce all of the t-test/ANOVA-style analyses in linear mixed-effects models, you'll need to better understand two things: (1) how to express your study design in a regression formula, and (2) how to get p-values for any tests you perform. The latter part is not obvious within the linear mixed-effects approach, since in many circumstances, the output of `lme4::lmer()` does not give you p-values by default, reflecting the fact that there are multiple options for deriving them [@Luke_2017]. Or, you might get p-values for individual regression coefficients, but the test you want to perform is a composite one where you need to test multiple parameters simultaneously. 
+
+First, let's take a closer look at the regression formula syntax in R and **`lme4`**. For the regression model $y = \beta_0 + \beta_1 x_1 + \beta_2 x_2 + \ldots + \beta_m x_m + e$ with by-subject random effects you'd have:
+
+`y ~ 1 + x1 + x2 + ... + xm + (1 + x1 + ... | subject)`
+
+The residual term is implied and so not mentioned; only the predictors. The left side (before the tilde `~`) specifies the response variable, the right side has the predictor variables. The term in brackets, `(... | ...)`, is specific to **`lme4`**. The right side of the vertical bar `|` specifies the name of a variable (in this case, `subject`) that codes the levels of the random factor. The left side specifies what regression coefficients you want to allow to vary over those levels. The `1` at the start of the formula specifies `1` that you want an intercept, which is included by default anyway, and so can be omitted. The `1` within the bracket specifies a **random intercept**, which is also included by default; the predictor variables mentioned inside the brackets specify **random slopes**. So you could write the above formula equivalently as:
+
+`y ~ x1 + x2 + ... + xm + (x1 + ... | subject)`.
+
+There is another important type of shortcut in R formulas, which we already saw in the [chapter on interactions](interactions.html); namely the "star syntax" `a * b` for specifying interactions. If you have two factors, `a` and `b` in your design, and you want all main effects and interactions in the model, you can use:
+
+`y ~ a * b`
+
+which is equivalent to `y ~ a + b + a:b` where `a` and `b` are the predictors coding main effects of A and B respectively, and `a:b` codes the AB interaction. It saves a lot of typing (and mistakes) to use the star syntax for interactions rather than spelling them out. This can be seen more easily in the example below, which codes a 2x2x2 factorial design including factors A, B, and C:
+
+`y ~ a * b * c`
+
+which is equivalent to
+
+`y ~ a + b + c + a:b + a:c + b:c + a:b:c`
+
+where `a:b`, `a:c`, and `b:c` are two-way interactions and `a:b:c` is the three-way interaction. You can use the star syntax inside the brackets for the random effects term as well, e.g., 
+
+`y ~ a * b * c + (a * b * c | subject)`
+
+is equivalent to
+
+`y ~ a + b + c + a:b + a:c + b:c + a:b:c + (a + b + c + a:b + a:c + b:c + a:b:c | subject)`
+
+which, despite its complexity, is a design that is not that uncommon in psychology (e.g., if you have all factors within and multiple stimuli per condition)!
+
+### Factors with more than two levels
+
+As noted above, you could conduct a one-factor ANOVA in regression using the formula `lm(y ~ x)` for single-level or `lmer(y ~ x + (1 | subject))` for the multilevel version without pseudoreplications. In the formula, the `x` predictor would be of type `factor()`, which R would (by default) convert to $k-1$ dummy-coded numerical predictors (one for each level; see the [interaction chapter](interactions.html) for information).
+
+It is often sensible to code your own numerical predictors, particularly if your goal is to do ANOVA-style tests of main effects and interactions, which can be difficult if any of your variables are of type `factor`. So for a design with one three-level factor called `meal` (`breakfast`, `lunch`, `dinner`) you could create two variables, `lunch_v_breakfast` and `dinner_v_breakfast` following the scheme below.
+
+```{r breakfast, echo=FALSE}
+tribble(~`factor level`, ~lunch_v_breakfast, ~dinner_v_breakfast,
+        "breakfast", "-1/3", "-1/3",
+        "lunch", "+2/3", "-1/3",
+        "dinner", "-1/3", "+2/3") %>%
+  knitr::kable(align = "lrr")
+```
+
+If your dependent variable is `calories`, your model would be:
+
+`calories ~ lunch_v_breakfast + dinner_v_breakfast`.
+
+But what if you wanted to interact `meal` with another two-level factor---say, `time_of_week` (`weekday` versus `weekend`, coded as -.5 and +.5 respectively), because you think the calories consumed per meal would differ across the levels of this variable? Then your model would be:
+
+`calories ~ (lunch_v_breakfast + dinner_v_breakfast) * time_of_week`.
+
+[(The inclusion of an interaction is the reason we chose the "deviation" coding scheme.)](interactions.html#coding-schemes-for-categorical-variables). We put brackets around the predictors associated with the two-level variable so that each one interacts with `time_of_week`. The above star syntax is shorthand for:
+
+`calories ~ lunch_v_breakfast + dinner_v_breakfast + time_of_week + lunch_v_breakfast:time_of_week + dinner_v_breakfast:time_of_week`.
+
+This is the "regression way" of estimating parameters for a 3x2 factorial design.
+
+### Multiparameter tests
+
+Whenever you are dealing with designs where all categorical factors have no more than two levels, the test of the regression coefficient associated with a given factor will be equivalent to the test for the effect in the ANOVA framework, provided you use [sum or deviation coding](multiple-regression.html#dealing-with-categorical-predictors). But in the above example, we have a 3x2 design, with two predictor variables coding the main effect of `meal` (`lunch_v_breakfast` and `dinner_v_breakfast`). Let's simulate some data and run a one-factor ANOVA with `aov()`, and then we'll replicate the analysis using the regression function `lm()` (note that the same procedure works for mixed-effects models on multilevel data, just using `lme4::lmer()` instead of `base::lm()`).
+
+```{r meals-aov}
+## make up some data
+set.seed(62)
+meals <- tibble(meal = factor(rep(c("breakfast", "lunch", "dinner"),
+                                  each = 6)),
+                time_of_week = factor(rep(rep(c("weekday", "weekend"),
+                                              each = 3), 3)),
+                calories = rnorm(18, 450, 50))
+
+## use sum coding instead of default 'dummy' (treatment) coding
+options(contrasts = c(unordered = "contr.sum", ordered = "contr.poly"))
+
+aov(calories ~ meal * time_of_week, data = meals) %>%
+  summary()
+```
+
+We get three $F$-tests, one for each main effect (`meal` and `time_of_week`) one for the interaction. What happens if we fit a model using `lm()`?
+
+```{r meals-lm}
+## add our own numeric predictors
+meals2 <- meals %>%
+  mutate(lunch_v_breakfast = if_else(meal == "lunch", 2/3, -1/3),
+         dinner_v_breakfast = if_else(meal == "dinner", 2/3, -1/3),
+         time_week = if_else(time_of_week == "weekend", 1/2, -1/2))
+
+## double check our coding
+distinct(meals2, meal, time_of_week,
+         lunch_v_breakfast, dinner_v_breakfast, time_week)
+
+## fit regression model
+mod <- lm(calories ~ (lunch_v_breakfast + dinner_v_breakfast) *
+            time_week, data = meals2)
+
+summary(mod)
+```
+
+OK, this output looks very different! How do you perform ANOVA-like tests in those situations? You have estimates for `lunch_v_breakfast` and `dinner_v_breakfast` but how would you convert this into a single test for the main effect of `meal`? Likewise, you have two interaction terms, `lunch_v_breakfast:tow` and `dinner_v_breakfast:tow`; how do you convert this into a single test for the interaction?
+
+The solution is to perform **multiparameter tests** using model comparison, implemented by the `anova()` function in R. To test for the main effect of `meal`, you'd compare a model containing the two predictor variables coding that factor (`lunch_v_breakfast` and `dinner_v_breakfast`) to a model excluding these two predictors but that is otherwise identical. You can either re-fit the model by writing it out and excluding the terms, or by using the `update()` function and removing the terms (which is a shortcut). Let's write it out first.
+
+```{r test-main-full}
+## fit the model
+mod_main_eff <- lm(calories ~ time_week +
+                     lunch_v_breakfast:time_week + dinner_v_breakfast:time_week,
+                   meals2)
+
+## compare models
+anova(mod, mod_main_eff)
+```
+
+OK, now here is an equivalent version using the shortcut `update()` function, which takes the model you want to update as the first argument and then a special syntax for the formula including your changes. For the formula, we use `. ~ . -lunch_v_breakfast -dinner_v_breakfast~` Although this formula seems weird, the dot `.` says "keep everything on this side of the model formula (left of `~`) as it is in the original model." So the formula `. ~ .` would use the same formula as the original model; that is, `update(mod, . ~ .)` would fit the exact same model as above. In contrast, `. ~ . -x -y` means "everything the same on the left side (same DV), but remove variables `x` and `y` from the right side.
+
+```{r test-main-effect-meal}
+mod_main_eff2 <- update(mod, . ~ . -lunch_v_breakfast -dinner_v_breakfast)
+
+anova(mod, mod_main_eff2)
+```
+
+As you can see, this gives us the same result as above.
+
+If we want to test the main effect of `time_of_week`, we remove that predictor.
+
+```{r test-main-effect-time}
+mod_tow <- update(mod, . ~ . -time_week)
+
+anova(mod, mod_tow)
+```
+
+Try to figure out how to test the interaction on your own.
+
+`r hide("Click to see solution")`
+
+```{r test-interact}
+mod_interact <- update(mod, . ~ . -lunch_v_breakfast:time_week
+                       -dinner_v_breakfast:time_week)
+
+anova(mod, mod_interact)
+```
+
+`r unhide()`
+
+We got the exact same results doing model comparison with `lm()` as we did using `aov()`. Although this involved more steps, it is worth learning this approach as it will ultimately give you much more flexibility.
+
