--- a/09-ordinal.Rmd
+++ b/09-ordinal.Rmd
@@ -4,6 +4,18 @@ It is perhaps easiest to think about ordinal data by viewing it as a more genera
 
 $$\eta = \beta_0 + \beta_1 X_i$$
 
-```{r start}
-library(tidyverse)
+```{r start, fig.cap = "TODO"}
+xx <- rep(seq(1, 3, by = .1))
+x2 <- xx + 3
+yy <- rep(seq(-3, 3, by = .1))
+
+ras <- bind_rows(crossing(xx, yy) %>%
+                 mutate(zz = yy, cat = 1L),
+                 crossing(xx, yy) %>%
+                 mutate(zz = yy + 1.5, cat = 2L))
+          
+ggplot(ras, aes(xx, yy)) +
+  geom_raster(aes(fill = zz), interpolate = TRUE) +
+  scale_fill_gradient2(high = "green", low = "red") +
+  facet_wrap(~cat)
 ```
