--- a/index.Rmd
+++ b/index.Rmd
@@ -21,6 +21,11 @@ knitr::write_bib(c(
 
 # Overview {-}
 
+::: {.warning}
+<h2>You are reading an old version of this textbook.</h2>
+<a href="https://psyteachr.github.io/stat-models">Go to the latest version</a>
+:::
+
 This textbook approaches statistical analysis through the General Linear Model, taking a simulation-based approach in the R software environment. The overarching goal is to teach students how to translate a description of the design of a study into a linear model to analyze data from that study. The focus is on the skills needed to analyze data from psychology experiments.
 
 The following topics are covered:
