--- a/02-bivariate-simulation.Rmd
+++ b/02-bivariate-simulation.Rmd
@@ -1,5 +1,10 @@
 # Understanding correlation and regression through bivariate simulation
 
+::: {.warning}
+<h2>You are reading an old version of this textbook.</h2>
+<a href="https://psyteachr.github.io/stat-models">Go to the latest version</a>
+:::
+
 * Packages used: 
     + **`tidyverse`**
     + **`corrr`**
