--- a/05-linear-mixed-effects-intro.Rmd
+++ b/05-linear-mixed-effects-intro.Rmd
@@ -1,5 +1,10 @@
 # Introducing Linear Mixed-Effects Models
 
+::: {.warning}
+<h2>You are reading an old version of this textbook.</h2>
+<a href="https://psyteachr.github.io/stat-models">Go to the latest version</a>
+:::
+
 ```{r setup, include=FALSE}
 library("kableExtra")
 
