--- a/06-linear-mixed-effects-one.Rmd
+++ b/06-linear-mixed-effects-one.Rmd
@@ -1,5 +1,10 @@
 # Linear mixed-effects models with one random factor
 
+::: {.warning}
+<h2>You are reading an old version of this textbook.</h2>
+<a href="https://psyteachr.github.io/stat-models">Go to the latest version</a>
+:::
+
 ## Learning objectives
 
 * understand how linear mixed-effects models can replace conventional analyses, and when they are appropriate
