--- a/packages.bib
+++ b/packages.bib
@@ -10,16 +10,16 @@
 @Manual{R-bookdown,
   title = {bookdown: Authoring Books and Technical Documents with R Markdown},
   author = {Yihui Xie},
-  year = {2020},
-  note = {R package version 0.20},
-  url = {https://github.com/rstudio/bookdown},
+  year = {2021},
+  note = {R package version 0.22},
+  url = {https://CRAN.R-project.org/package=bookdown},
 }
 
 @Manual{R-dplyr,
   title = {dplyr: A Grammar of Data Manipulation},
   author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller},
   year = {2021},
-  note = {R package version 1.0.5},
+  note = {R package version 1.0.7},
   url = {https://CRAN.R-project.org/package=dplyr},
 }
 
@@ -42,8 +42,8 @@
 @Manual{R-kableExtra,
   title = {kableExtra: Construct Complex Table with kable and Pipe Syntax},
   author = {Hao Zhu},
-  year = {2020},
-  note = {R package version 1.3.1},
+  year = {2021},
+  note = {R package version 1.3.4},
   url = {https://CRAN.R-project.org/package=kableExtra},
 }
 
@@ -58,9 +58,8 @@
 @Manual{R-readr,
   title = {readr: Read Rectangular Text Data},
   author = {Hadley Wickham and Jim Hester},
-  year = {2020},
-  note = {R package version 1.4.0},
-  url = {https://CRAN.R-project.org/package=readr},
+  year = {2021},
+  note = {https://readr.tidyverse.org, https://github.com/tidyverse/readr},
 }
 
 @Manual{R-stringr,
@@ -75,7 +74,7 @@
   title = {tibble: Simple Data Frames},
   author = {Kirill Müller and Hadley Wickham},
   year = {2021},
-  note = {R package version 3.1.0},
+  note = {R package version 3.1.2},
   url = {https://CRAN.R-project.org/package=tibble},
 }
 
@@ -98,8 +97,8 @@
 @Manual{R-webex,
   title = {webex: Create Interactive Web Exercises in R Markdown},
   author = {Dale Barr and Lisa DeBruine},
-  year = {2019},
-  note = {R package version 0.9.1.9100},
+  year = {2021},
+  note = {R package version 0.9.2},
   url = {https://github.com/psyteachr/webex},
 }
 
@@ -110,7 +109,7 @@
   address = {Boca Raton, Florida},
   year = {2016},
   note = {ISBN 978-1138700109},
-  url = {https://github.com/rstudio/bookdown},
+  url = {https://bookdown.org/yihui/bookdown},
 }
 
 @Book{ggplot22016,
